2005-10-14  Nicola Pero  <n.pero@mi.flashnet.it>

	* GNUstep.sh.in: Export GNUSTEP_USER_ROOT after setting it (Bug
	reported by Fred Kiefer <fredkiefer@gmx.de>).

2005-10-13  Nicola Pero  <n.pero@mi.flashnet.it>
	
	* GNUstep.sh.in: Read system, local, network, user paths from
	configuration files and use the configuration files settings in
	preference to the hardcoded ones.
	* GNUstep.csh.in: Same changes, where we use sed to convert on the
	fly the sh syntax of config files to csh syntax, then we eval the
	result.
	* GNUmakefile.in: Do not compile, install and clean user_home.
	* user_home.c: Removed.
	* GNUstep-reset.sh (GNUSTEP_USER_CONFIG_FILE, GNUSTEP_USER_DIR,
	GNUSTEP_USER_DEFAULTS_DIR, GNUSTEP_CONFIG_FILE): Unset.
	
2005-10-13  Nicola Pero  <n.pero@mi.flashnet.it>
	
	* GNUmakefile.in (GNUSTEP_CONFIG_FILE): Fixed replacing this variable.

2005-10-13  Nicola Pero  <n.pero@mi.flashnet.it>

	* configure.ac: Added --with-user-config-file, --with-user-dir,
	--with-user-defaults-dir options.  Remove --with-user-root option.
	Simplified implementation of --with-config-file option.  Do not
	generate GNUsteprc.
	* configure: Regenerated.
	* GNUstep.conf.in (GNUSTEP_USER_CONFIG_FILE): New variable.
	(GNUSTEP_USER_DIR): New variable.
	(GNUSTEP_USER_DEFAULTS_DIR): New variable.
	* GNUsteprc.in: Removed.
	
2005-10-13  Nicola Pero  <n.pero@mi.flashnet.it>

	Warning: --prefix=/usr/GNUstep/System no longer works.  Please use
	--prefix=/usr/GNUstep or --with-system-root=/usr/GNUstep/System.
	* configure.ac: Simplified management of --prefix.  Do not try
	setting default prefix from an existing GNUSTEP_SYSTEM_ROOT as
	that is read from the config file after the default prefix is set.
	Do not set $prefix variable that it not used anywhere.  Fixed bug
	in setting GNUSTEP_SYSTEM_ROOT introduced in previous changes.
	* configure: Regenerated.
	
2005-10-12  Nicola Pero  <n.pero@mi.flashnet.it>

	* .cvsignore: Ignore GNUstep.conf

2005-10-12  Nicola Pero  <n.pero@mi.flashnet.it>
	